force-app/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/GW_Volunteers__Number_of_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Number_of_Volunteers__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>El valor predeterminado es 1. Aumentar si esta persona está trayendo más personas a quienes no se realiza el seguimiento directamente</inlineHelpText>
    <label>Number of Volunteers</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>